[project]
name = "sorting-algos"
version = "0.1.0"
description = "Classical sorting algorithms in Python with pytest coverage and timing benchmarks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=2",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
